<resources>
    <string name="app_name">Photos</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_photo">Add Photo</string>
    <string name="name_label">Name: (required)</string>
    <string name="add_album">Add Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="album">Album</string>
    <string name="back">Back</string>
    <string name="created_at">Created At:</string>
    <string name="select">Select</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="search">Search</string>
    <string name="save_as_album">Save As Album</string>
    <string name="rename">Rename</string>
    <string name="rename_album">Rename Album</string>
    <string name="add_tag">Add Tag</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="tag_types">Tag Types</string>
    <string name="values">Values</string>
    <string name="value">Value</string>
    <string name="value_required">Value (required)</string>
    <string name="conjunctive_search">Conjunctive Search?</string>
</resources>