<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_action_plus"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>